--- a/src/App.css
+++ b/src/App.css
@@ -206,8 +206,8 @@ header{
   background: rgb(255, 103, 47);
   border-radius: 100vw;
   top: -50%;
-  /* border: 6px solid cyan; */
-  border: 6px solid rgb(151, 255, 255);
+  border: 6px solid cyan;
+  /* border: 6px solid rgb(151, 255, 255); */
   transition: 0.5s;
 }
 
@@ -221,7 +221,7 @@ header{
   background:transparent;
   border-top-right-radius: 18px;
   /* box-shadow: 0px -10px 0 0 cyan; */
-  box-shadow: 0px -10px 0 0 rgb(151, 255, 255);
+  /* box-shadow: 0px -10px 0 0 rgb(151, 255, 255); */
 }
 
 .indicator::after{
@@ -234,7 +234,7 @@ header{
   background:transparent;
   border-top-left-radius: 18px;
   /* box-shadow: 0px -10px 0 0 cyan; */
-  box-shadow: 0px -10px 0 0 rgb(151, 255, 255);
+  /* box-shadow: 0px -10px 0 0 rgb(151, 255, 255); */
 }
 
 .bottomMenu ul li:nth-child(1).active ~ .indicator{
